<resources>
    <string name="app_name">Unit Converter</string>
    <string name="sample">Sample</string>
    <string name="welcome_statement">Welcome,\nwhat do you\nwant to\nconvert?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <string name="clear">AC</string>
    <string name="editText1">0.000</string>
    <string name="editText2">0.000</string>
    <string name="parentheses">()</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="backspace"> </string>
    <string name="tap_to_change_value">Tap to change value</string>
    <string name="_0_00">0.00</string>
    <string name="m">m</string>


    <string-array name="currencies">
        <item>Currency 1</item>
        <item>Currency 2</item>
    </string-array>
</resources>