<?xml version="1.0" encoding="utf-8"?>
<com.example.unitconverter.util.KeyboardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_gravity="bottom">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/seven"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/eight"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/nine"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintEnd_toStartOf="@id/clearAll"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/four"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seven"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/five"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintTop_toBottomOf="@id/eight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/six"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintEnd_toStartOf="@id/clearAll"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintTop_toBottomOf="@id/eight" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/one"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/point"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/two"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintTop_toBottomOf="@id/five" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/three"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/doubleZero"
        app:layout_constraintEnd_toStartOf="@id/clear"
        app:layout_constraintStart_toEndOf="@id/two"
        app:layout_constraintTop_toBottomOf="@id/six" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/multiply"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/three"
        app:layout_constraintTop_toBottomOf="@id/clearAll" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/point"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/zero"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/zero"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/doubleZero"
        app:layout_constraintStart_toEndOf="@id/point"
        app:layout_constraintTop_toBottomOf="@id/two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doubleZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drawable_keyboard_ripple"
        android:text="@string/doubleZero"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clear"
        app:layout_constraintStart_toEndOf="@id/zero"
        app:layout_constraintTop_toBottomOf="@id/three" />

</com.example.unitconverter.util.KeyboardView>