<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/TopConversionLayout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="@color/local_red">

        <ImageView
            android:id="@+id/BtnMoreConversions"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="23dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_arrow_down_24"
            />

        <Spinner
            android:id="@+id/TopConversionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="72dp"
           />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TopConversionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TopConversionSpinner"
            android:layout_centerHorizontal="true"
            android:textSize="93sp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="23dp"
            android:hint="@string/_0_00"
            android:padding="2dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TopConversionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TopConversionEditText"
            android:layout_alignTop="@id/TopConversionEditText"
            android:textColor="@color/local_white"
            android:text="@string/tap_to_change_value"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TopConversionUnitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/m"
            android:textColor="@color/local_white"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/BottomConversionLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
       android:layout_gravity="bottom"
        android:background="@color/local_yellow_dull">

        <Spinner
            android:id="@+id/BottomConversionSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/BottomConversionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/_0_00"
            android:textColor="@color/local_black_bright"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/BottomConversionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_change_value"
            android:textColor="@color/local_black_dull"
             />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/BottomConversionUnitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:padding="8dp"
            android:layout_marginEnd="23dp"
            android:text="@string/m"
            android:textColor="@color/local_black_dull"
             />

    </RelativeLayout>



</LinearLayout>



